<resources>
    <string name="app_name">DroidGuard App Test</string>
    <string name="ADB_detect">ADB Detect</string>
    <string name="b">------</string>
    <string name="debugger_detect">Debugger Detect</string>
    <string name="check">Check</string>
    <string name="t">True</string>
    <string name="f">False</string>
    <string name="root_detect">Root Detect</string>
    <string name="xposed_detect">Xposed Detect</string>
    <string name="emulator_detect">Emulator Detect</string>
</resources>
